--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node dist/src/main.js",
-    "start:dev": "tsnd --respawn src/main.ts",
+    "start:dev": "tsnd --respawn src/server.ts",
     "test": "npm run test:unit",
     "test:unit": "NODE_ENV=test jest --coverage",
     "prepare": "husky install",
@@ -37,8 +37,12 @@
   "devDependencies": {
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
-    "@types/express": "^4.17.15",
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.2.5",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/pg": "^8.10.2",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "eslint": "^8.31.0",
@@ -60,8 +64,13 @@
     ]
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "pg": "^8.11.0",
+    "pg-promise": "^11.5.0",
+    "uuid": "^9.0.0"
   }
 }
